# qfieldcloud-sdk-python

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENCE  Pipfile  README.md  index.html  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: continuous_integration.yml  deploy_to_pypi.yml  docs_builder.yml
cli/: index.html
docs/: mkdocs.yml
docs/docs/: cli.md  examples.md  index.md
examples/: index.html
qfieldcloud_sdk/: __main__.py  cli.py  interfaces.py  sdk.py  utils.py
qfieldcloud_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qfieldcloud_sdk/: cli.py  sdk.py
tests/: test_cli.py  test_cli_client.py
