[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
    "wheel",
    "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "qfieldcloud-sdk"
description = "The official QFieldCloud SDK and CLI."
authors = [
    { name = "Ivan Ivanov", email = "ivan@opengis.ch" },
]
license = { file = "LICENSE" }
keywords = ["QFieldCloud", "QField", "QGIS", "CI", "SDK", "CLI"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "certifi>=2023.7.22",
    "charset-normalizer>=3.2.0",
    "click>=8.1.5",
    "idna>=3.4",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "tqdm>=4.65.0",
    "urllib3>=2.0.7",
    "pathvalidate>=3.2.1",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
docs = [
    "mkdocstrings[python]~=0.25",
    "mkdocs-click~=0.8.1",
    "mkdocs-material~=9.5.17",
    "fancyboxmd~=1.1"
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "pre-commit==4.2.0",
]

[project.scripts]
qfieldcloud-cli = "qfieldcloud_sdk.cli:cli"

[project.urls]
homepage = "https://github.com/opengisch/qfieldcloud-sdk-python"
documentation = "https://github.com/opengisch/qfieldcloud-sdk-python"
repository = "https://github.com/opengisch/qfieldcloud-sdk-python"
tracker = "https://github.com/opengisch/qfieldcloud-sdk-python/issues"

[tool.setuptools]
packages = ["qfieldcloud_sdk"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"
