[metadata]
name = qfieldcloud-sdk
version = dev
author = Ivan Ivanov
author_email = ivan@opengis.ch
description = The official QFieldCloud SDK and CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opengisch/qfieldcloud-sdk-python
project_urls =
    Bug Tracker = https://github.com/opengisch/qfieldcloud-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click
    requests

scripts = src/bin/qfieldcloud-cli

[options.packages.find]
where = src
